--- a/public/courses.html
+++ b/public/courses.html
@@ -1,9 +1,9 @@
-<ad-title>Courses</ad-title>
+<ad-title><$ courses title /></ad-title>
 
 <style>@import url("/<#? applang ?#>/courses.css");</style>
 
 <div class="header">
-    <div class="title">Courses</div>
+    <div class="title"><$ courses title /></div>
 </div>
 
 <div class="content">
