--- a/public/settings.html
+++ b/public/settings.html
@@ -124,6 +124,8 @@
             <select class="plain" name="language" id="Select_Language">
                 <option value="en">English</option>
                 <option value="id">Bahasa Indonesia</option>
+                <option value="kr">Korean (한국어)</option>
+                <option value="jp">Japanese (日本語)</option>
             </select>
         </div>
     </div>
@@ -141,7 +143,7 @@
         </div>
         <div class="stack vertical">
             <div><$ settings copyright /></div>
-            <div style="opacity: 0.6;"><$ settings copyright_text /></div>
+            <div style="opacity: 0.6;">© 2025 Agape Dimas. <$ settings copyright_text /></div>
         </div>
     </div>
 </div>
