Patched some issues
- Added letter list
- Added auto-refresh for topic details when a problem is submitted or deleted
- Fixed sorting issue
- Fixed grouping issue

--- a/src/pages/course_admin.html
+++ b/src/pages/course_admin.html
@@ -497,7 +497,7 @@
                 $.ajax({
                     type: "patch",
                     url: "/admin/topics/reorder",
-                    data: { id: dragged.data.id, sort: index - 1 }
+                    data: { id: dragged.data.id, sort: index + 1 }
                 })
 
                 dragged = null;
