Updated some layouts
- Added logo for print paper
- Fixed lettered list order

--- a/public/print.html
+++ b/public/print.html
@@ -1,5 +1,5 @@
-<div id="Grid_Print">
-    <div class="cover">
+<article id="Grid_Print">
+    <section class="cover">
         <img class="logo" src="/assets/logo_fs.png">
 
         <div class="title">
@@ -9,10 +9,11 @@
         </div>
 
         <span class="time" id="Text_Date"></span>
-    </div>
-    <div id="Grid_PrintContent" class="content">
-    </div>
-    <div class="backcover">
+    </section>
+    <section id="Grid_PrintContent" class="content" title="Judul">
+        <img src="/assets/logo_fs_monochrome.svg" style="display: none">
+    </section>
+    <section class="backcover">
         <img class="logo" src="/assets/logo_fs_black.png">
         <span></span>
         <div class="footer">
@@ -21,5 +22,5 @@
             </span>
             <span class="disclaimer"><$ topics questionbank_disclaimer /></span>
         </div>
-    </div>
-</div>
+    </section>
+</article>
