--- a/src/pages/course_404.html
+++ b/src/pages/course_404.html
@@ -1,4 +1,4 @@
-<ad-title>Course Not Found</ad-title>
+<ad-title><$ courses notfound_title/></ad-title>
 
 <style>
     @import url("/<#? applang ?#>/courses.css");
@@ -48,7 +48,7 @@
 
 <div class="header cascaded">
     <div class="buttons dynamic" theme="dark">
-        <button class="back" onclick="Courses.Back()">Courses</button>
+        <button class="back" onclick="Courses.Back()"><$ courses title /></button>
     </div>
     <div class="title hide"></div>
 </div>
