--- a/src/pages/topic.html
+++ b/src/pages/topic.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="content">
-    <h3><#? topic.name ?#></h3>
+    <h3 id="Text_TopicName"><#? topic.name ?#></h3>
     <div id="Grid_CourseProblems">
         <div class="progressring"></div>
     </div>
