--- a/src/pages/topic_404.html
+++ b/src/pages/topic_404.html
@@ -10,11 +10,12 @@
 
 <div class="header cascaded">
     <div class="buttons">
-        <button class="back" onclick="Topics.Back()">Back</button>
+        <button class="back" onclick="Topics.Back()"><$ topics back/></button>
     </div>
     <div class="title hide"></div>
 </div>
 
 <div class="content">
+    <h3 id="Text_TopicName" style="display: none"></h3>
     <div id="Grid_CourseProblems" class="notfound"></div>
 </div>
