--- a/public/help.html
+++ b/public/help.html
@@ -50,7 +50,7 @@
 
             const role = document.createElement("span");
             role.classList.add("role");
-            role.innerHTML = account.role;
+            role.innerHTML = account.role.name;
 
             const details = document.createElement("div");
             details.classList.add("details");
