--- a/src/pages/course.html
+++ b/src/pages/course.html
@@ -101,6 +101,7 @@
 </div>
 
 <script>
+    PendingId = "<#? topic.pending.id ?#>";
     {
         Courses.Active = JSON.parse(`<#? course ?#>`);
 
@@ -111,7 +112,7 @@
 
         $.ajax({
             type: "get",
-            url: "/topics/get?id=<#? course.id ?#>&type=course",
+            url: "/topics/get/<#? course.id ?#>?type=course",
             success: function(topics)
             {
                 Grid_CourseTopics.innerHTML = "";
@@ -176,7 +177,8 @@
         {
             Grid_CourseCard.classList.remove("hasBanner");
             const url = await Courses.FetchBanner("<#? course.id ?#>?v=<#? course.bannerversion ?#>");
-            Grid_CourseCard.style.setProperty("--image", "url(" + url + ")");
+            Grid_CourseCard.style.setProperty("--image", "url(" + url[0] + ")");
+            Grid_CourseCard.style.setProperty("--blur", "url(" + url[1] + ")");
             Grid_CourseCard.classList.add("hasBanner");
         });
     }
