--- a/src/pages/course_admin.html
+++ b/src/pages/course_admin.html
@@ -185,6 +185,7 @@
 </div>
 
 <script>
+    PendingId = "<#? topic.pending.id ?#>";
     {
         Courses.Active = JSON.parse(`<#? course ?#>`);
 
@@ -450,7 +451,7 @@
 
         $.ajax({
             type: "get",
-            url: "/topics/get?id=<#? course.id ?#>&type=course",
+            url: "/topics/get/<#? course.id ?#>?type=course",
             success: function(topics)
             {
                 Grid_CourseTopics.innerHTML = "";
@@ -537,8 +538,9 @@
                 {
                     Grid_CourseCard.classList.remove("hasBanner");
                     const url = await Courses.FetchBanner("<#? course.id ?#>", true);
-                    Grid_CourseCard.style.setProperty("--image", "url(" + url + ")");
-                    Image_Banner.src = url;
+                    Grid_CourseCard.style.setProperty("--image", "url(" + url[0] + ")");
+                    Grid_CourseCard.style.setProperty("--blur", "url(" + url[1] + ")");
+                    Image_Banner.src = url[0];
                     Grid_CourseCard.classList.add("hasBanner");
 
                     Button_CancelEdit.disabled = false;
@@ -575,8 +577,9 @@
                 {
                     Grid_CourseCard.classList.remove("hasBanner");
                     const url = await Courses.FetchBanner("<#? course.id ?#>", true);
-                    Grid_CourseCard.style.setProperty("--image", "url(" + url + ")");
-                    Image_Banner.src = url;
+                    Grid_CourseCard.style.setProperty("--image", "url(" + url[0] + ")");
+                    Grid_CourseCard.style.setProperty("--blur", "url(" + url[1] + ")");
+                    Image_Banner.src = url[0];
                     Grid_CourseCard.classList.add("hasBanner");
 
                     Button_CancelEdit.disabled = false;
@@ -605,7 +608,8 @@
         {
             Grid_CourseCard.classList.remove("hasBanner");
             const url = await Courses.FetchBanner("<#? course.id ?#>?v=<#? course.bannerversion ?#>");
-            Grid_CourseCard.style.setProperty("--image", "url(" + url + ")");
+            Grid_CourseCard.style.setProperty("--image", "url(" + url[0] + ")");
+            Grid_CourseCard.style.setProperty("--blur", "url(" + url[1] + ")");
             Grid_CourseCard.classList.add("hasBanner");
         });
 
