--- a/src/pages/topic_admin.html
+++ b/src/pages/topic_admin.html
@@ -351,7 +351,7 @@
         if (item == null)
             return;
 
-        const topic = await $.get("/topics/get?id=" + item.data.id + "&type=topic");
+        const topic = await $.get("/topics/get/" + item.data.id + "?type=topic");
         const box = Topics.Render(topic[0]);
         box.classList.add("active");
 
