--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -1,17 +1,15 @@
-<ad-title><#? topic.name ?#> - <$ mentor title /></ad-title>
+<ad-title><#? topic.name ?#> - <#? course.name ?#> - <$ mentor title /></ad-title>
 
 <style>
     @import url("/quiz.css");
     #Activity_Main
     {
-        background: var(--background-page);
+        background: inherit;
     }
 </style>
 
 <section>
-    <div class="header">
-        <div class="title"><$ mentor title /></div>
-    </div>
+    <div class="header cascaded"></div>
 
     <div class="content" id="Content_Ready">
         <div class="about">
@@ -21,23 +19,43 @@
             </div>
             <button class="plain" id="Button_ChangeTopic"><$ topics change_topic_title/></button>
         </div>
-        <div class="metadata">
-
+        <div class="metadata hidden" id="Grid_Metadata">
+            <div>
+                <span class="icon">&#xefb9;</span>
+                <span id="Text_MetadataUpdated"></span>
+            </div>
+            <div>
+                <span class="icon">&#xef13;</span>
+                <span id="Text_MetadataProblems"></span>
+            </div>
+            <div>
+                <span class="icon">&#xfb41;</span>
+                <span><$ mentor metadata_aigenerated /></span>
+            </div>
+            <div class="hidden">
+                <span class="icon">&#xef11;</span>
+                <span id="Text_MetadataScore"></span>
+            </div>
         </div>
         <span></span>
         <div id="Grid_Status" class="status">
             <span id="Text_Status"></span>
             <div class="progressbar"></div>
         </div>
-        <button id="Button_Start" class="accent hidden"><$ generic start /></button>
+        <div id="Grid_Buttons" class="hidden">
+            <button id="Button_Start" class="accent"><$ generic start /></button>
+            <button id="Button_Review" class="accent hidden"><$ mentor results_view /></button>
+
+        </div>
     </div>
 </section>
 
 <section>
-    <div class="header cascaded"></div>
+    <div class="header cascaded">
+        <div class="title"><#? topic.name ?#></div>
+    </div>
 
     <div class="content" id="Content_Quiz">
-        <h3><#? topic.name ?#></h3>
         <div id="Grid_QuizContainer">
             <div id="Text_Question" class="markdown"></div>
             <div id="Grid_Choices"></div>
@@ -45,15 +63,18 @@
         <div id="Grid_Navigation">
             <button id="Button_Prev" class="plain accent">
                 <span class="icon">&#xef38;</span>
-                <span>Back</span>
+                <span><$ generic prev/></span>
             </button>
             <div></div>
             <button id="Button_Next" class="plain accent">
-                <span>Next</span>
+                <span><$ generic next/></span>
                 <span class="icon">&#xef4a;</span>
             </button>
             <button id="Button_Submit" class="accent">
-                <span>Submit</span>
+                <span><$ generic submit/></span>
+            </button>
+            <button id="Button_Done" class="plain accent hidden">
+                <span><$ generic done/></span>
             </button>
         </div>
     </div>
@@ -90,32 +111,84 @@
         Quiz.Open(0);
         Activity_Main.navigateTo(1);
     }
+    Button_Review.onclick = Button_Start.onclick;
     Button_ChangeTopic.onclick = function()
     {
-        PopOver_SelectTopics.open(Button_ChangeTopic);
+        PopOver_SelectTopics.open();
     }
 
-    $.ajax(
+    function Status_Check()
     {
-        type: "get",
-        url: "/topics/quiz/get/<#? topic.id ?#>",
-        success: function(data)
+        $.ajax(
         {
-            Quiz.Status = data.status;
-            Quiz.Problems = data.problems;
-            Quiz.Created = data.created;
+            type: "get",
+            url: "/topics/quiz/get/<#? topic.id ?#>",
+            success: function(data)
+            {
+                Quiz.Status = data.status;
+                Quiz.Problems = data.problems;
+                Quiz.Created = data.created;
 
-            if (data.status == "available")
-            {
-                Button_Start.classList.remove("hidden"); 
-                Grid_Status.classList.add("hidden"); 
+                if (data.status == "available")
+                {
+                    const t1 = parseInt(Quiz.Created);
+                    const t2 = new Date(Date.now() - Quiz.Created);
+                    const time = t1 == 0 ? 0 : t2 > 1000 * 3600 * 24 * 6 ? moment(t1).format("ll") : moment(t1).fromNow();
+                
+                    Text_MetadataUpdated.innerText = "<$ mentor metadata_updated />".format(time);
+                    Text_MetadataProblems.innerText = "<$ mentor metadata_problems />".format(Quiz.Problems.length);
+
+                    Grid_Buttons.classList.remove("hidden"); 
+                    Grid_Metadata.classList.remove("hidden");
+                    Grid_Status.classList.add("hidden"); 
+                    
+                    const lastSession = Data.Get("<#? topic.id ?#>");
+                    if (lastSession?.value?.created == data.created && lastSession?.value?.result)
+                    {
+                        Button_Start.classList.add("hidden");
+                        Button_Review.classList.remove("hidden");
+                        Button_Submit.classList.add("hidden");
+                        Button_Done.classList.remove("hidden");
+
+                        const correct = lastSession.value.result.filter(o => o.isCorrect == true).length;
+                        const total = lastSession.value.result.length;
+                        Text_MetadataScore.innerText = "<$ mentor metadata_score />".format(Math.round(correct / total * 100));
+                        Text_MetadataScore.parentNode.classList.remove("hidden");
+                        Quiz.Done = true;
+
+                        for (let i = 0; i < Quiz.Problems.length; i++)
+                        {
+                            const problem = Quiz.Problems[i];
+                            problem.chosen = lastSession.value.result[i].chosen * 1;
+                            problem.answer = lastSession.value.result[i].answer * 1;
+                            problem.isCorrect = lastSession.value.result[i].isCorrect;
+                            problem.reason = lastSession.value.result[i].reason;
+                        }
+                    }
+                    else
+                    {
+                        Data.Set("<#? topic.id ?#>", 
+                        { 
+                            created: Quiz.Created,
+                            result: null
+                        });
+                    }
+                }
+                else if (data.status == "generating")
+                {
+                    Data.Set("<#? topic.id ?#>", 
+                    { 
+                        created: Quiz.Created,
+                        result: null
+                    });
+
+                    Text_Status.innerText = "<$ mentor generating />";
+                    setTimeout(Status_Check, 15000);
+                }
             }
-            else if (data.status == "generating")
-            {
-                Text_Status.innerText = "<$ mentor generating />";
-            }
-        }
-    });
+        });
+    }
+    Status_Check();
 
     Button_Prev.onclick = function()
     {
@@ -128,6 +201,17 @@
     Button_Submit.onclick = async function()
     {
         const result = await $.post("/topics/quiz/submit/<#? topic.id ?#>", { answers: Quiz.Problems.map(o => o.chosen) });
-        console.log(result);
+        Data.Set("<#? topic.id ?#>", 
+        { 
+            created: Quiz.Created,
+            result: result
+        });
+
+        Status_Check();
+        Activity_Main.navigateTo(0);
+    }
+    Button_Done.onclick = function()
+    {
+        Activity_Main.navigateTo(0);
     }
 </script>
