--- a/src/pages/topic.html
+++ b/src/pages/topic.html
@@ -11,6 +11,7 @@
 <div class="header cascaded">
     <div class="buttons">
         <button class="back" onclick="Topics.Back()"><$ topics back /></button>
+        <button id="Button_Quiz" class="icon" ad-tooltip="<$ topics tooltip_quizmentor />">&#xfb41;</button>
         <button id="Button_Print" class="icon" ad-tooltip="<$ topics tooltip_print />">&#xf948;</button>
     </div>
     <div class="title hide"></div>
@@ -28,6 +29,11 @@
         Button_Print.onclick = function()
         {
             window.print();
+        }
+        Button_Quiz.onclick = function()
+        {
+            const path = window.location.pathname.substring(window.location.pathname.indexOf("/courses") + 8);
+            window.location.href = "/mentor" + path;
         }
 
         $.ajax(
