--- a/src/pages/course.html
+++ b/src/pages/course.html
@@ -53,7 +53,7 @@
 
 <div class="header cascaded">
     <div class="buttons dynamic" theme="dark">
-        <button class="back" onclick="Courses.Back()"><$ courses title /></button>
+        <button class="back" onclick="Courses.Back()" id="Button_BackCourses"></button>
         <button class="icon" id="Button_More" ad-tooltip="More">&#xf153;</button>
     </div>
     <div class="title hide"><#? course.alias ?#></div>
@@ -107,6 +107,7 @@
 
 <script>
     PendingId = "<#? topic.pending.id ?#>";
+    Courses.Label(Button_BackCourses);
     {
         Courses.Active = JSON.parse(`<#? course ?#>`);
 
