--- a/public/home.html
+++ b/public/home.html
@@ -50,7 +50,8 @@
         overflow-x: auto;
         scrollbar-width: none;
         scroll-behavior: smooth;
-        scroll-snap-type: x proximity;
+        scroll-snap-type: x proximity;    
+        scroll-padding: 10px;
         padding: 10px;
         margin: -10px;
         mask-image: linear-gradient(90deg, transparent, black 10px, black calc(100% - 10px), transparent);
@@ -90,6 +91,7 @@
         overflow-x: auto;
         scrollbar-width: none;
         scroll-behavior: smooth;
+        scroll-padding: 0.75em;
         padding: 10px 0.75em;
         margin: -10px -0.75em;
         scroll-snap-type: x proximity;
